test/arrays/ferguson/inout-tuple-ref.good
inout-tuple-ref.chpl:3: error: inout varargs not currently supported
